--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,15 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - test
   pull_request: ~
+  workflow_dispatch:
 
 jobs:
   artifacts:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2.7.0
 
       - uses: docker://node:10-alpine
         name: Setup Node
